# rizzler

./: .devenv.flake.nix  .gitignore  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  PROMPT.md  README.md  fix_bedrock.sh  flake.nix  test_conflict_parser.rs  test_disk_cache.rs
.sourcegraph/: memory.md
examples/: benchmark.rs  custom_strategy.rs  merge_conflicts_example.sh  merge_conflicts_example.sh.bedrock  merge_conflicts_example.sh.conflicted  rizzler.toml
git-merge-ai-resolver/: Cargo.toml  README.md  RELEASE_NOTES.md
git-merge-ai-resolver/proptest-regressions/: conflict_parser.txt
git-merge-ai-resolver/src/: ai_provider.rs  ai_resolution.rs  ai_resolution_windowing.rs  cache.rs  config.rs  conflict_parser.rs  fallback.rs  git_integration.rs  git_setup.rs  lib.rs  main.rs  resolution_engine.rs  windowing.rs
git-merge-ai-resolver/src/providers/: bedrock.rs  claude.rs  gemini.rs  mod.rs  openai.rs
git-merge-ai-resolver/tests/: ai_resolution_windowing_test.rs  bedrock_resolution_test.rs  cache_test.rs  comprehensive_property_test.rs  conflict_parser_test.rs  context_matching_fix_test.rs  context_windowing_test.rs  fallback_integration_test.rs  function_extraction_test.rs  gemini_api_integration_test.rs  gemini_provider_test.rs  prompt_engineering_test.rs  test_context_matching_properties.rs
prompts/: integration-test.md
proptest-regressions/: git_integration.txt
scripts/: check_merge_conflicts.sh  resolve_merge_conflicts.sh  test_bedrock_conflicts.sh  test_claude_conflicts.sh  test_gemini_conflicts.sh  test_resolve_conflicts.sh
specs/: AIProviders.md  Architecture.md  CI_CD.md  CommandLineInterface.md  CoreArchitecture.md  GitIntegration.md  License.md  TestingStrategy.md  TracingAndMetrics.md
src/: ai_provider.rs  ai_resolution.rs  ai_resolution_windowing.rs  cache.rs  cache_disk_tests.rs  caching_provider.rs  config.rs  conflict_parser.rs  diagnostics.rs  fallback.rs  git_integration.rs  git_setup.rs  lib.rs  main.rs  prompt_engineering.rs  resolution_engine.rs  retry.rs  windowing.rs
test_pkg/: Cargo.toml
tests/: ai_resolution_windowing_test.rs  bedrock_provider_test.rs  bedrock_resolution_test.rs  cache_test.rs  claude_provider_test.rs  comprehensive_property_test.proptest-regressions  comprehensive_property_test.rs  (+20 more)
(+12 files in other folders)
