[package]
name = "rizzler"
version = "0.1.0"
edition = "2021"
authors = ["Geoffrey Huntley <ghuntley@ghuntley.com>"]
description = "AI-powered Git merge conflict resolver"
license = "MIT"
default-run = "rizzler"

[dependencies]
base64 = "0.21"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
proptest = "1.3"
rand = "0.8"
ureq = { version = "2.9", features = ["json"] }
dirs = "5.0"
md5 = "0.7"
tempfile = "3.3"
regex = "1.10"
aws-config = "1.1"
aws-sdk-bedrockruntime = "1.82"
aws-types = "1.1"
tokio = { version = "1.32", features = ["full"] }

[dev-dependencies]
proptest = "1.3"
static_assertions = "1.1"
regex = "1.10"

[features]
default = []
integration-tests = []