[package]
name = "git-merge-ai-resolver"
version = "0.1.0"
edition = "2021"
authors = ["Geoffrey Huntley <ghuntley@ghuntley.com>"]
description = "AI-powered Git merge conflict resolver"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
proptest = "1.3"
rand = "0.8"

[dev-dependencies]
proptest = "1.3"
static_assertions = "1.1"
tempfile = "3.3"